[project]
name = "genie-question-clarification"
version = "0.1.0"
description = "LangGraph agent for interactive Databricks Genie queries"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-databricks>=0.1.0",
    "databricks-sdk>=0.35.0",
]

[tool.uv]
package = true
