[project]
name = "genie-question-clarification"
version = "0.1.0"
description = "LangGraph agent for interactive Databricks Genie queries"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "databricks-langchain>=0.8.2",
    "databricks-sdk>=0.35.0",
    "mlflow==3.5.1",
    "mlflow[databricks]",
    "langgraph-cli[inmem]>=0.1.0",
]

[tool.uv]
package = true
